# recommendations-places

./: README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  script.js  serve.py  styles.css
.github/workflows/: main.yml
src/: check_database_connection.py  check_qdrant_connection.py  create_embedings.py  create_embedings_qdrant.py  create_tables.py  data_source.csv  get_data.py  main.py  migrate_places_data.py  qdrant_diagnostic.py
src/api/: routers.py
src/api/v1/places/: endpoints.py  repositories.py  schema.py  services.py
src/core/settings/: base.py
src/db/posgresql/: __init__.py  connection.py
src/db/posgresql/models/public/: __init__.py  constants.py  places.py
src/db/posgresql/repository/: places.py
src/db/qdrant/: __init__.py  connection.py  repository.py
